force-app/main/default/objects/Opportunity/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <formula>Account.ccrz__E_AccountGroup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Group - for Product and Price Selection on the Account</inlineHelpText>
    <label>Account Group</label>
    <type>Text</type>
</CustomField>