force-app/main/default/objects/Opportunity/fields/Actual_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attendance__c</fullName>
    <label>Actual Attendance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>