force-app/main/default/objects/Opportunity/fields/AED_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>AED_Device_Type__c</fullName>
    <label>AED Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Philips</fullName>
            </value>
            <value>
                <fullName>Zoll Medical</fullName>
            </value>
            <value>
                <fullName>EnPro</fullName>
            </value>
            <value>
                <fullName>Physio-Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>