force-app/main/default/objects/Opportunity/fields/Approved_for_Commision_Payment__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Commision_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Commission Payment</label>
    <type>Checkbox</type>
</CustomField>