force-app/main/default/objects/Opportunity/fields/Approved_Process_Deviations__c.field-meta.xml
<CustomField>
    <fullName>Approved_Process_Deviations__c</fullName>
    <inlineHelpText>Approved deviations are outlined in the Description field of the Contract Object</inlineHelpText>
    <label>Approved Process Deviations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, select Contract Number above</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>