force-app/main/default/objects/Opportunity/fields/Assigned_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Scheduler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>