force-app/main/default/objects/Opportunity/fields/BGST_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>BGST_Activity_Type__c</fullName>
    <label>BGST Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>LTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>