force-app/main/default/objects/Opportunity/fields/BGST_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>BGST_Lead_Source__c</fullName>
    <description>Lead Source Field use for the BGST Profile</description>
    <label>BGST Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>TSC Transfer</fullName>
            </value>
            <value>
                <fullName>Voice Mail</fullName>
            </value>
            <value>
                <fullName>After-Hours Transfer Lead Form</fullName>
            </value>
            <value>
                <fullName>Referral/Repeat Business</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>