force-app/main/default/objects/Opportunity/fields/BGST_Rep__c.field-meta.xml
<CustomField>
    <fullName>BGST_Rep__c</fullName>
    <description>Checks opportunity owner profile and marks the BGST Rep checks check box BGST Rep if the opportunity owner profile matches one of the BGST User profiles</description>
    <formula>IF(OR(Owner.Profile.Name = &quot;ARC BGST Sales Admin&quot;, Owner.Profile.Name = &quot;ARC BGST Sales User&quot;), 

true, false)</formula>
    <inlineHelpText>Opportunity Owner is BGST Rep</inlineHelpText>
    <label>BGST Rep</label>
    <type>Checkbox</type>
</CustomField>