force-app/main/default/objects/Opportunity/fields/BGST_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>BGST_Rep_Email__c</fullName>
    <description>If the opportunity owner is BGST rep, assign the an email address from the opportunity owner&#39;s record.</description>
    <formula>IF(BGST_Rep__c, Owner.Email,&quot;&quot;)</formula>
    <label>BGST Rep Email</label>
    <type>Text</type>
</CustomField>