force-app/main/default/objects/Opportunity/fields/Books_for_Class__c.field-meta.xml
<CustomField>
    <fullName>Books_for_Class__c</fullName>
    <inlineHelpText>Enter what books are required.</inlineHelpText>
    <label>Books for Class</label>
    <type>TextArea</type>
</CustomField>