force-app/main/default/objects/Opportunity/fields/Breaks__c.field-meta.xml
<CustomField>
    <fullName>Breaks__c</fullName>
    <inlineHelpText>What breaks are needed?</inlineHelpText>
    <label>Breaks</label>
    <length>140</length>
    <type>Text</type>
</CustomField>