force-app/main/default/objects/Opportunity/fields/Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>Cart_Id__c</fullName>
    <label>Cart Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>