force-app/main/default/objects/Opportunity/fields/CC_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>CC_Account_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Locate the Standard Pricing for the Opportunity and Account</inlineHelpText>
    <label>CC Account Group</label>
    <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>