force-app/main/default/objects/Opportunity/fields/Client_PO__c.field-meta.xml
<CustomField>
    <fullName>Client_PO__c</fullName>
    <label>Client PO#</label>
    <length>250</length>
    <type>Text</type>
</CustomField>