force-app/main/default/objects/Opportunity/fields/Closed_Lost_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Details__c</fullName>
    <label>Closed Lost Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>