force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <description>FOR HISTORICAL REPORTING PURPOSES ONLY</description>
    <label>Closed Lost Reason (old)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Client Ceased to Communicate</fullName>
            </value>
            <value>
                <fullName>Insufficient Staff Size</fullName>
            </value>
            <value>
                <fullName>Lack of Internal Approval</fullName>
            </value>
            <value>
                <fullName>Loss to Competitor - AHA</fullName>
            </value>
            <value>
                <fullName>Loss to Competitor - Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Service Delivery Issue</fullName>
            </value>
            <value>
                <fullName>Time Commitment</fullName>
            </value>
            <value>
                <fullName>Expired Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>