force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason_New__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason_New__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Cycle</fullName>
            </value>
            <value>
                <fullName>Client Ceased to Communicate</fullName>
            </value>
            <value>
                <fullName>Contract Requirements</fullName>
            </value>
            <value>
                <fullName>Delivery Timeline unavailable</fullName>
            </value>
            <value>
                <fullName>Expired Opportunity</fullName>
            </value>
            <value>
                <fullName>Insufficient number of Participants</fullName>
            </value>
            <value>
                <fullName>Non standard course not available</fullName>
            </value>
            <value>
                <fullName>Previous Service Issues</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Pricing Agreement</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Recently trained with competitor</fullName>
            </value>
            <value>
                <fullName>Recently trained with Red Cross</fullName>
            </value>
            <value>
                <fullName>Referred to Counsilman-Hunsacker</fullName>
                <label>Referred to Counsilman-Hunsaker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>