force-app/main/default/objects/Opportunity/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <inlineHelpText>Enter a confirmation number if available</inlineHelpText>
    <label>Confirmation Number</label>
    <length>140</length>
    <type>Text</type>
</CustomField>