force-app/main/default/objects/Opportunity/fields/Contract_Exception__c.field-meta.xml
<CustomField>
    <fullName>Contract_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contract is not required for Legal Review.</inlineHelpText>
    <label>Contract Exception</label>
    <type>Checkbox</type>
</CustomField>