force-app/main/default/objects/Opportunity/fields/Contract_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>