force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <formula>Contract.ContractTerm</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>