force-app/main/default/objects/Opportunity/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <inlineHelpText>Enter the county of the class location</inlineHelpText>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>