force-app/main/default/objects/Opportunity/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <inlineHelpText>Coupon code that supports discount.</inlineHelpText>
    <label>Coupon Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>