force-app/main/default/objects/Opportunity/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For TX Pilot</description>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Customer Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>