force-app/main/default/objects/Opportunity/fields/Customer_Contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_phone__c</fullName>
    <description>For TX pilot</description>
    <formula>Customer_Contact__r.Phone</formula>
    <label>Customer Contact phone</label>
    <type>Text</type>
</CustomField>