force-app/main/default/objects/Opportunity/fields/Customer_Contact_phone_ext__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_phone_ext__c</fullName>
    <description>For TX Pilot</description>
    <formula>Customer_Contact__r.Extension__c</formula>
    <label>Customer Contact phone ext</label>
    <type>Text</type>
</CustomField>