force-app/main/default/objects/Opportunity/fields/Date_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sale__c</fullName>
    <description>Date AED device was sold</description>
    <label>Date of Sale</label>
    <type>Date</type>
</CustomField>