force-app/main/default/objects/Opportunity/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>05:00 PM</fullName>
            </value>
            <value>
                <fullName>05:15 PM</fullName>
            </value>
            <value>
                <fullName>05:30 PM</fullName>
            </value>
            <value>
                <fullName>05:45 PM</fullName>
            </value>
            <value>
                <fullName>06:00 PM</fullName>
            </value>
            <value>
                <fullName>06:15 PM</fullName>
            </value>
            <value>
                <fullName>06:30 PM</fullName>
            </value>
            <value>
                <fullName>06:45 PM</fullName>
            </value>
            <value>
                <fullName>07:00 PM</fullName>
            </value>
            <value>
                <fullName>07:15 PM</fullName>
            </value>
            <value>
                <fullName>07:30 PM</fullName>
            </value>
            <value>
                <fullName>07:45 PM</fullName>
            </value>
            <value>
                <fullName>08:00 PM</fullName>
            </value>
            <value>
                <fullName>08:15 PM</fullName>
            </value>
            <value>
                <fullName>08:30 PM</fullName>
            </value>
            <value>
                <fullName>08:45 PM</fullName>
            </value>
            <value>
                <fullName>09:00 PM</fullName>
            </value>
            <value>
                <fullName>09:15 PM</fullName>
            </value>
            <value>
                <fullName>09:30 PM</fullName>
            </value>
            <value>
                <fullName>09:45 PM</fullName>
            </value>
            <value>
                <fullName>10:00 PM</fullName>
            </value>
            <value>
                <fullName>10:15 PM</fullName>
            </value>
            <value>
                <fullName>10:30 PM</fullName>
            </value>
            <value>
                <fullName>10:45 PM</fullName>
            </value>
            <value>
                <fullName>11:00 PM</fullName>
            </value>
            <value>
                <fullName>11:15 PM</fullName>
            </value>
            <value>
                <fullName>11:30 PM</fullName>
            </value>
            <value>
                <fullName>11:45 PM</fullName>
            </value>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>12:15 AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>