force-app/main/default/objects/Opportunity/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DVD and TV on site</fullName>
            </value>
            <value>
                <fullName>LCD Projector on site</fullName>
            </value>
            <value>
                <fullName>Instructor to provide AV equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>