force-app/main/default/objects/Opportunity/fields/Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Needed__c</fullName>
    <inlineHelpText>What equipment is needed for the class?</inlineHelpText>
    <label>Equipment Needed</label>
    <type>TextArea</type>
</CustomField>