force-app/main/default/objects/Opportunity/fields/Est_Delivery_Fee__c.field-meta.xml
<CustomField>
    <fullName>Est_Delivery_Fee__c</fullName>
    <label>Est. Delivery Fee</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ListPrice</field>
        <operation>equals</operation>
        <value>1.00</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>