force-app/main/default/objects/Opportunity/fields/Est_Num_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Est_Num_of_Attendees__c</fullName>
    <description>Aggregate of Product quantities excluding delivery fee</description>
    <label>Est. Num of Attendees</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ListPrice</field>
        <operation>notEqual</operation>
        <value>1.00</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>