force-app/main/default/objects/Opportunity/fields/Est_Price_per_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Est_Price_per_Attendee__c</fullName>
    <formula>(Amount- Est_Delivery_Fee__c )/ Est_Num_of_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Price per Attendee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>