force-app/main/default/objects/Opportunity/fields/Estimated_Annual_Participants__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Participants__c</fullName>
    <inlineHelpText>Total anticipated number of people trained annually under this Opportunity.</inlineHelpText>
    <label>Estimated Annual Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>