force-app/main/default/objects/Opportunity/fields/Estimated_annual_revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_annual_revenue__c</fullName>
    <inlineHelpText>Total anticipated annual revenue for this Opportunity.</inlineHelpText>
    <label>Estimated Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>