force-app/main/default/objects/Opportunity/fields/Final_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Billing_Amount__c</fullName>
    <label>Final Billing Amount</label>
    <length>250</length>
    <type>Text</type>
</CustomField>