force-app/main/default/objects/Opportunity/fields/FS_Transaction_Sale__c.field-meta.xml
<CustomField>
    <fullName>FS_Transaction_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if this Sales Opportunity is for a one-off sale for a Full Service Class</inlineHelpText>
    <label>FS Transaction Sale</label>
    <type>Checkbox</type>
</CustomField>