force-app/main/default/objects/Opportunity/fields/Highest_Discount__c.field-meta.xml
<CustomField>
    <fullName>Highest_Discount__c</fullName>
    <formula>IF(Highest_Product_Discount_Value__c&gt;=Highest_Product_Discount__c,Highest_Product_Discount_Value__c,Highest_Product_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>