force-app/main/default/objects/Opportunity/fields/Highest_Product_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Highest_Product_Discount_Value__c</fullName>
    <label>Highest BGST Product Discount</label>
    <summarizedField>OpportunityLineItem.Discount_Value__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>