force-app/main/default/objects/Opportunity/fields/Instructor_1__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1__c</fullName>
    <inlineHelpText>Enter name and contact information</inlineHelpText>
    <label>Instructor 1</label>
    <type>TextArea</type>
</CustomField>