force-app/main/default/objects/Opportunity/fields/Instructor_2__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2__c</fullName>
    <inlineHelpText>Enter name and contact information</inlineHelpText>
    <label>Instructor 2</label>
    <type>TextArea</type>
</CustomField>