force-app/main/default/objects/Opportunity/fields/Instructor_3__c.field-meta.xml
<CustomField>
    <fullName>Instructor_3__c</fullName>
    <inlineHelpText>Enter name and contact information</inlineHelpText>
    <label>Instructor 3</label>
    <type>TextArea</type>
</CustomField>